--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -12,7 +12,8 @@
         tools:layout="@layout/fragment_feed" >
         <action
             android:id="@+id/action_feedFragment_to_popUpFragment"
-            app:destination="@id/popUpFragment" />
+            app:destination="@id/popUpFragment"
+            app:enterAnim="@anim/nav_default_enter_anim" />
     </fragment>
     <dialog
         android:id="@+id/popUpFragment"
